# fajt

./: Cargo.toml  README.md  build.rs  bulk-check.sh
lexer/: Cargo.toml  README.md
lexer/src/: code_point.rs  error.rs  lib.rs  number.rs  reader.rs  regexp.rs  string.rs  token.rs  unicode_escape_sequence.rs
lexer/tests/: assignment.rs  comments.rs  identifier.rs  lexer.rs  lib.rs  numbers.rs  punctuators.rs  regexp.rs  strings.rs  unary_expression.rs
lexer/tests/utils/: mod.rs
parser/: Cargo.toml  README.md  build.rs
parser/docs/: arrow-function-level-problem.md  object-literal-or-assignment-pattern-problem.md
parser/src/: assignment_pattern.rs  ast.rs  binary_expr.rs  binding.rs  class.rs  cover.rs  early_error.rs  error.rs  expr.rs  expression.rs  function.rs  iteration.rs  lib.rs  literal.rs  member_access.rs  method.rs  module.rs  parser.rs  reader.rs  statement.rs  stmt.rs  variable.rs
parser/src/ast/: binding.rs  class.rs  cover.rs  expr.rs  expression.rs  literal.rs  macros.rs  statement.rs  stmt.rs
parser/src/ast/expression/: literal.rs
parser/src/conversion/: assignment_expr.rs  for_declaration.rs  mod.rs
parser/src/error/: diagnostic.rs  emitter.rs  mod.rs
parser/src/parser/: binary_expr.rs  binary_expression.rs  binding.rs  class.rs  cover.rs  expr.rs  expression.rs  function.rs  iteration.rs  literal.rs  member_access.rs  module.rs  statement.rs  stmt.rs  variable.rs
parser/src/statement/: variable.rs
parser/src/static_semantics/: literal.rs  macros.rs  mod.rs
parser/tests/: README.md  declaration.rs  expr.rs  expr_literal.rs  expr_literal_array.rs  expr_literal_object.rs  lib.rs  macro.rs  semicolon.rs  snapshot.rs  statement.rs  stmt.rs  stmt_variable.rs  stmt_variable_array_binding.rs  stmt_variable_object_binding.rs  tests.rs
parser/tests/cases/decl/: fail-await-keyword-inside-async-function.md
parser/tests/cases/semicolon/: auto-semicolon-do-while.md  auto-semicolon-separated-by-close-brace.md  auto-semicolon-separated-by-line.md  break-stmt.md  continue-stmt.md  debugger-stmt.md  do-while.md  export-default.md  export.md  expr-stmt.md  import.md  missing-semicolon-between-expr-stmt.md  return-stmt.md  throw-stmt.md  var-stmt.md
parser/tests/cases/source-script/: fail-export-module.md  (+1 more)
parser/tests/expr/: arrow_function.rs  assignment.rs  async_expr.rs  binary.rs  call.rs  class.rs  expr.rs  flow_control.rs  member_access.rs  new.rs  unary.rs  update.rs  yield_expr.rs
parser/tests/expression/: arrow_function.rs  assignment.rs  async_expr.rs  binary.rs  binary_expression.rs  call.rs  class.rs  expression.rs  flow_control.rs  function.rs  literal.rs  math.rs  member.rs  member_access.rs  new.rs  unary.rs  unary_expression.rs  update.rs  update_expression.rs  yield_expr.rs  yield_expression.rs
parser/tests/snapshots/: new-nested.json  new-nested.md  new-no-params.json
parser/tests/statement/: control.rs  exception.rs  iteration.rs  statement.rs  variable.rs
parser/tests/stmt/: control.rs  exception.rs  iteration.rs
(+1062 files in other folders)
