[package]
name = "fajt"
version = "0.1.0"
authors = ["Felix Stridsberg <felixstridsberg@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "common",
    "macros",
    "lexer",
    "parser",
    "ast",
    "codegen",
    "testing",
]

[dependencies]
clap = "2.33"
fajt_parser = { path = "./parser" }
fajt_codegen = { path = "./codegen" }

[dev-dependencies]
fajt_macros = { path = "./macros" }
fajt_ast = { path = "./ast" }
fajt_testing = { path = "./testing" }

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
