[package]
name = "fajt_lexer"
version = "0.1.0"
authors = ["Felix Stridsberg <felixstridsberg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fajt_ast = { path = "../ast" }
fajt_common = { path = "../common" }
fajt_macros = { path = "../macros" }

bitflags = "1.0"
serde = {version = "1.0", features = ["derive"]}
unicode-id = "0.3.3"
