[package]
name = "fajt_parser"
version = "0.1.0"
authors = ["Felix Stridsberg <felixstridsberg@gmail.com>"]
edition = "2021"

[dependencies]
fajt_ast = { path = "../ast" }
fajt_common = { path = "../common" }
fajt_lexer = { path = "../lexer" }
fajt_macros = { path = "../macros" }

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
